@@ -20,6 +20,9 @@
 #
 # Environment Variables:
 #
+#   DRILL_HOME                 Drill home (defaults based on this
+#                              script's path.)
+#
 #   JAVA_HOME                  The java implementation to use.
 #
 #   DRILL_CLASSPATH            Extra Java CLASSPATH entries.
@@ -30,6 +33,23 @@
 #   HADOOP_HOME                Hadoop home
 #
 #   HBASE_HOME                 HBase home
+#
+# Variables may be set in one of four places:
+#
+#   Environment (per run)
+#   drill-env.sh (per site)
+#   distrib-env.sh (per distribution)
+#   drill-config.sh (this file, Drill defaults)
+#
+# Properties "inherit" from items lower on the list, and may be "overridden" by items
+# higher on the list. In the environment, just set the variable:
+#
+#   export FOO=value
+#
+# The three files must set values as shown below:
+#
+#   export FOO=${FOO:-"value"}
+#
 
 # resolve links - "${BASH_SOURCE-$0}" may be a softlink
 this="${BASH_SOURCE-$0}"
@@ -50,94 +70,240 @@ home=`cd "$bin/..">/dev/null; pwd`
 this="$home/bin/$script"
 
 # the root of the drill installation
-if [ -z "$DRILL_HOME" ]; then
-  DRILL_HOME="$home"
-fi
+DRILL_HOME=${DRILL_HOME:-$home}
 
-#check to see if the conf dir or drill home are given as an optional arguments
-while [ $# -gt 1 ]; do
-  if [ "--config" = "$1" ]; then
+# Standardize error messages
+
+fatal_error() {
+  echo "ERROR: $@" 1>&2
+  exit 1
+}
+
+# Check to see if the conf dir or drill home are given as an optional arguments
+# Arguments may appear anywhere on the command line. --site is an alias, better
+# specifies that the location contains all site-specific files, not just config.
+#
+# Remaining arguments go into the args array - use that instead of $@.
+
+args=()
+while [[ $# > 0 ]]
+do
+  arg="$1"
+  case "$arg" in
+  --site|--config)
     shift
-    confdir=$1
+    DRILL_CONF_DIR=$1
     shift
-    DRILL_CONF_DIR=$confdir
-  else
-    # Presume we are at end of options and break
-    break
-  fi
+    ;;
+  *)
+    args+=("$1")
+    shift
+    ;;
+  esac
 done
+export args
 
-# Allow alternate drill conf dir location.
-DRILL_CONF_DIR="${DRILL_CONF_DIR:-/etc/drill/conf}"
+# If config dir is given, it must exist.
 
-if [ ! -d $DRILL_CONF_DIR ]; then
-  DRILL_CONF_DIR=$DRILL_HOME/conf
+if [ -n "$DRILL_CONF_DIR" ]; then
+  if [[ ! -d "$DRILL_CONF_DIR" ]]; then
+    fatal_error "Config dir does not exist:" $DRILL_CONF_DIR
+  fi
+else
+
+  # Allow alternate drill conf dir location.
+  DRILL_CONF_DIR=${DRILL_CONF_DIR:-/etc/drill/conf}
+
+  # Otherwise, use the default
+  if [[ ! -d "$DRILL_CONF_DIR" ]]; then
+    DRILL_CONF_DIR="$DRILL_HOME/conf"
+  fi
 fi
 
-# Source drill-env.sh for any user configured values
-. "${DRILL_CONF_DIR}/drill-env.sh"
+# However we got the config dir, it must contain a config
+# file, and that file must be readable.
+# Most files are optional, so check the one that is required:
+# drill-override.conf.
+
+testFile="$DRILL_CONF_DIR/drill-override.conf"
+if [[ ! -a "$testFile" ]]; then
+  fatal_error "Drill config file missing: $testFile -- Wrong config dir?"
+fi
+if [[ ! -r "$testFile" ]]; then
+  fatal_error "Drill config file not readable: $testFile - Wrong user?"
+fi
+
+# Set Drill-provided defaults here. Do not put Drill defaults
+# in the distribution or user environment config files.
+
+# The SQLline client does not need the code cache.
+
+export SQLLINE_JAVA_OPTS=${SQLLINE_JAVA_OPTS:-"-XX:MaxPermSize=512M"}
+
+# Class unloading is disabled by default in Java 7
+# http://hg.openjdk.java.net/jdk7u/jdk7u60/hotspot/file/tip/src/share/vm/runtime/globals.hpp#l1622
+export SERVER_GC_OPTS="$SERVER_GC_OPTS -XX:+CMSClassUnloadingEnabled -XX:+UseG1GC"
+
+# No GC options by default for SQLLine
+export CLIENT_GC_OPTS=${CLIENT_GC_OPTS:-""}
+
+# Source the optional drill-env.sh for any user configured values.
+# We read the file only in the $DRILL_CONF_DIR, which might be a
+# site-specific folder. By design, we do not search both the site
+# folder and the $DRILL_HOME/conf folder; we look in just the one
+# identified by $DRILL_CONF_DIR.
+#
+# Note: the env files must set properties as follows for "inheritance"
+# to work correctly:
+#
+# export FOO=${FOO:-"value"}
+
+drillEnv="$DRILL_CONF_DIR/drill-env.sh"
+if [ -r "$drillEnv" ]; then
+  . "$drillEnv"
+fi
+
+# Source distrib-env.sh for any distribution-specific settings.
+# distrib-env.sh is optional; it is created by some distribution installers
+# that need distribution-specific settings.
+
+distribEnv="$DRILL_HOME/conf/distrib-env.sh"
+if [ -r "$distribEnv" ]; then
+  . "$distribEnv"
+fi
+
+# Default memory settings if none provided by the environment or
+# above config files.
+# The Drillbit needs a large code cache.
+
+export DRILL_MAX_DIRECT_MEMORY=${DRILL_MAX_DIRECT_MEMORY:-"8G"}
+export DRILL_HEAP=${DRILL_HEAP:-"4G"}
+export DRILLBIT_MAX_PERM=${DRILLBIT_MAX_PERM:-"512M"}
+export DRILLBIT_CODE_CACHE_SIZE=${DRILLBIT_CODE_CACHE_SIZE:-"1G"}
+
+export DRILLBIT_OPTS="-Xms$DRILL_HEAP -Xmx$DRILL_HEAP -XX:MaxDirectMemorySize=$DRILL_MAX_DIRECT_MEMORY"
+export DRILLBIT_OPTS="$DRILLBIT_OPTS -XX:ReservedCodeCacheSize=$DRILLBIT_CODE_CACHE_SIZE -Ddrill.exec.enable-epoll=true"
+export DRILLBIT_OPTS="$DRILLBIT_OPTS -XX:MaxPermSize=$DRILLBIT_MAX_PERM"
+
+# Under YARN, the log directory is usually YARN-provided. Replace any
+# value that may have been set in drill-env.sh.
+
+if [ -n "$DRILL_YARN_LOG_DIR" ]; then
+  DRILL_LOG_DIR="$DRILL_YARN_LOG_DIR"
+fi
 
 # get log directory
-if [ "x${DRILL_LOG_DIR}" = "x" ]; then
-  export DRILL_LOG_DIR=/var/log/drill
+if [ -z "$DRILL_LOG_DIR" ]; then
+  # Try the optional location
+  DRILL_LOG_DIR=/var/log/drill
+  if [[ ! -d "$DRILL_LOG_DIR" && ! -w "$DRILL_LOG_DIR" ]]; then
+    # Default to the drill home folder. Create the directory
+    # if not present.
+
+    DRILL_LOG_DIR=$DRILL_HOME/log
+  fi
 fi
 
-touch "$DRILL_LOG_DIR/sqlline.log" &> /dev/null
-TOUCH_EXIT_CODE=$?
-if [ "$TOUCH_EXIT_CODE" = "0" ]; then
-  if [ "x$DRILL_LOG_DEBUG" = "x1" ]; then
-    echo "Drill log directory: $DRILL_LOG_DIR"
-  fi
-  DRILL_LOG_DIR_FALLBACK=0
-else
-  #Force DRILL_LOG_DIR to fall back
-  DRILL_LOG_DIR_FALLBACK=1
+# Regardless of how we got the directory, it must exist
+# and be writable.
+
+mkdir -p "$DRILL_LOG_DIR"
+if [[ ! -d "$DRILL_LOG_DIR" && ! -w "$DRILL_LOG_DIR" ]]; then
+  fatal_error "Log directory does not exist or is not writable: $DRILL_LOG_DIR"
 fi
 
-if [ ! -d "$DRILL_LOG_DIR" ] || [ "$DRILL_LOG_DIR_FALLBACK" = "1" ]; then
-  if [ "x$DRILL_LOG_DEBUG" = "x1" ]; then
-    echo "Drill log directory $DRILL_LOG_DIR does not exist or is not writable, defaulting to $DRILL_HOME/log"
-  fi
-  DRILL_LOG_DIR=$DRILL_HOME/log
-  mkdir -p $DRILL_LOG_DIR
-fi
+# Store the pid file in Drill home by default, else in the location
+# provided in drill-env.sh.
+
+export DRILL_PID_DIR=${DRILL_PID_DIR:-$DRILL_HOME}
+
+# Prepare log file prefix and the main Drillbit log file.
+
+export DRILL_LOG_PREFIX="$DRILL_LOG_DIR/drillbit"
+export DRILLBIT_LOG_PATH="${DRILL_LOG_PREFIX}.log"
+
+# Class path construction.
 
 # Add Drill conf folder at the beginning of the classpath
-CP=$DRILL_CONF_DIR
+CP="$DRILL_CONF_DIR"
+
+# If both user and YARN-provided Java lib paths exist,
+# combine them.
+
+if [ -n "$DOY_JAVA_LIB_PATH" ]; then
+  if [ -z "$DRILL_JAVA_LIB_PATH" ]; then
+    export DRILL_JAVA_LIB_PATH="$DOY_JAVA_LIB_PATH"
+  else
+    export DRILL_JAVA_LIB_PATH="$DOY_JAVA_LIB_PATH:$DRILL_JAVA_LIB_PATH"
+  fi
+fi
+
+# Add the lib directory to the library path, if it exists.
+
+libDir="$DRILL_CONF_DIR/lib"
+if [ -d "$libDir" ]; then
+  if [ -z "$DRILL_JAVA_LIB_PATH" ]; then
+    export DRILL_JAVA_LIB_PATH="$libDir"
+  else
+    export DRILL_JAVA_LIB_PATH="$libDir:$DRILL_JAVA_LIB_PATH"
+  fi
+fi
+
+# Add $DRILL_HOME/conf if the user has provided their own
+# site configuration directory.
+# Ensures we pick up the default logback.xml, etc. if the
+# user does not provide their own.
+# Also, set a variable to remember that the config dir
+# is non-default, which is needed later.
+
+if [[ ! "$DRILL_CONF_DIR" -ef "$DRILL_HOME/conf" ]]; then
+  export DRILL_SITE_DIR="$DRILL_CONF_DIR"
+  CP="$CP:$DRILL_HOME/conf"
+fi
 
 # Followed by any user specified override jars
-if [ "${DRILL_CLASSPATH_PREFIX}x" != "x" ]; then
-  CP=$CP:$DRILL_CLASSPATH_PREFIX
+if [ -n "$DRILL_CLASSPATH_PREFIX" ]; then
+  CP="$CP:$DRILL_CLASSPATH_PREFIX"
 fi
 
 # Next Drill core jars
-CP=$CP:$DRILL_HOME/jars/*
+if [ -n "$DRILL_TOOL_CP" ]; then
+  CP="$CP:$DRILL_TOOL_CP"
+fi
+CP="$CP:$DRILL_HOME/jars/*"
 
 # Followed by Drill override dependency jars
-CP=$CP:$DRILL_HOME/jars/ext/*
+CP="$CP:$DRILL_HOME/jars/ext/*"
 
 # Followed by Hadoop's jar
-if [ "${HADOOP_CLASSPATH}x" != "x" ]; then
-  CP=$CP:$HADOOP_CLASSPATH
+if [ -n "$HADOOP_CLASSPATH" ]; then
+  CP="$CP:$HADOOP_CLASSPATH"
 fi
 
 # Followed by HBase' jar
-if [ "${HBASE_CLASSPATH}x" != "x" ]; then
-  CP=$CP:$HBASE_CLASSPATH
+if [ -n "$HBASE_CLASSPATH" ]; then
+  CP="$CP:$HBASE_CLASSPATH"
 fi
 
-# Followed by Drill other dependency jars
-CP=$CP:$DRILL_HOME/jars/3rdparty/*
-CP=$CP:$DRILL_HOME/jars/classb/*
-
-# Finally any user specified 
-if [ "${DRILL_CLASSPATH}x" != "x" ]; then
-  CP=$CP:$DRILL_CLASSPATH
+# Generalized extension path (use this for new deployments instead
+# of the specialized HADOOP_ and HBASE_CLASSPATH variables.)
+if [ -n "$EXTN_CLASSPATH" ]; then
+  CP="$CP:$EXTN_CLASSPATH"
 fi
 
-# Newer versions of glibc use an arena memory allocator that causes virtual
-# memory usage to explode. Tune the variable down to prevent vmem explosion.
-export MALLOC_ARENA_MAX=${MALLOC_ARENA_MAX:-4}
+# Followed by Drill's other dependency jars
+CP="$CP:$DRILL_HOME/jars/3rdparty/*"
+CP="$CP:$DRILL_HOME/jars/classb/*"
+
+# Finally any user specified
+# Allow user jars to appear in $DRILL_CONF_DIR/jars to avoid mixing
+# user and Drill distribution jars.
+if [ -d "$DRILL_CONF_DIR/jars" ]; then
+  CP="$CP:$DRILL_CONF_DIR/jars/*"
+fi
+if [ -n "$DRILL_CLASSPATH" ]; then
+  CP="$CP:$DRILL_CLASSPATH"
+fi
 
 # Test for cygwin
 is_cygwin=false
@@ -152,22 +318,18 @@ if [ -z "$JAVA_HOME" ]; then
     while [ -h "$SOURCE" ]; do # resolve $SOURCE until the file is no longer a symlink
       DIR="$( cd -P "$( dirname "$SOURCE" )" && pwd )"
       SOURCE="$(readlink "$SOURCE")"
-      [[ $SOURCE != /* ]] && SOURCE="$DIR/$SOURCE" # if $SOURCE was a relative symlink, we need to resolve it relative to the path where the symlink file was located
+      # if $SOURCE was a relative symlink, we need to resolve it relative
+      # to the path where the symlink file was located
+      [[ $SOURCE != /* ]] && SOURCE="$DIR/$SOURCE"
     done
     JAVA_HOME="$( cd -P "$( dirname "$SOURCE" )" && cd .. && pwd )"
   fi
   # if we didn't set it
   if [ -z "$JAVA_HOME" ]; then
-    cat 1>&2 <<EOF
-+======================================================================+
-|      Error: JAVA_HOME is not set and Java could not be found         |
-+----------------------------------------------------------------------+
-| Apache Drill requires Java 1.7 or later.                             |
-+======================================================================+
-EOF
-    exit 1
+    fatal_error "JAVA_HOME is not set and Java could not be found"
   fi
 fi
+
 # Now, verify that 'java' binary exists and is suitable for Drill.
 if $is_cygwin; then
   JAVA_BIN="java.exe"
@@ -176,14 +338,13 @@ else
 fi
 JAVA=`find -L "$JAVA_HOME" -name $JAVA_BIN -type f | head -n 1`
 if [ ! -e "$JAVA" ]; then
-  echo "Java not found at JAVA_HOME=$JAVA_HOME."
-  exit 1
+  fatal_error "Java not found at JAVA_HOME=$JAVA_HOME."
 fi
+
 # Ensure that Java version is at least 1.7
 "$JAVA" -version 2>&1 | grep "version" | egrep -e "1.4|1.5|1.6" > /dev/null
 if [ $? -eq 0 ]; then
-  echo "Java 1.7 or later is required to run Apache Drill."
-  exit 1
+  fatal_error "Java 1.7 or later is required to run Apache Drill."
 fi
 
 # Adjust paths for CYGWIN
@@ -193,21 +354,24 @@ if $is_cygwin; then
   DRILL_LOG_DIR=`cygpath -w "$DRILL_LOG_DIR"`
   CP=`cygpath -w -p "$CP"`
   if [ -z "$HADOOP_HOME" ]; then
-    HADOOP_HOME=${DRILL_HOME}/winutils
+    export HADOOP_HOME=${DRILL_HOME}/winutils
   fi
 fi
 
 # make sure allocator chunks are done as mmap'd memory (and reduce arena overhead)
-export MALLOC_ARENA_MAX=4
+# Newer versions of glibc use an arena memory allocator that causes virtual
+# memory usage to explode. Tune the variable down to prevent vmem explosion.
+export MALLOC_ARENA_MAX=${MALLOC_ARENA_MAX:-4}
 export MALLOC_MMAP_THRESHOLD_=131072
 export MALLOC_TRIM_THRESHOLD_=131072
 export MALLOC_TOP_PAD_=131072
 export MALLOC_MMAP_MAX_=65536
 
 # Variables exported form this script
-export HADOOP_HOME
 export is_cygwin
 export DRILL_HOME
 export DRILL_CONF_DIR
 export DRILL_LOG_DIR
 export CP
+export JAVA_HOME
+export JAVA
